--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="about-section" class="bg-white p-6 md:p-8 rounded-2xl shadow-lg mb-6">
             <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">About</h2>
             <p id="about-text" class="text-gray-700 leading-relaxed">
-                A skilled Research Analyst with a strong background in both quantitative and qualitative research methodologies. Experienced in managing the full project lifecycle, from study design to client-ready reports. Proficient in data analysis, visualization, and interpretation using tools like SPSS, Power BI, and Microsoft Excel. A proactive team player with a focus on delivering actionable insights and clear communication.
+                A skilled Research Analyst with a strong background in both quantitative and qualitative research methodologies. Experienced in managing the full project lifecycle, from study design to client-ready reports. Proficient in data analysis, visualization, and interpretation using tools like SPSS, Power BI, Microsoft Excel, and Microsoft PowerPoint. A proactive team player with a focus on delivering actionable insights and clear communication.
             </p>
         </div>
 
@@ -173,12 +173,15 @@
         <div id="cert-section" class="bg-white p-6 md:p-8 rounded-2xl shadow-lg">
             <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">Certificates & Trainings</h2>
             <div class="list-disc list-inside space-y-2 text-gray-700">
-                <p><strong>Research Data and Statistical Analysis using R Programming</strong> - INFLIBNET Centre, India (2018)</p>
-                <p><strong>Artificial Intelligence & Machine Learning using R</strong> - FingerTips Data Science Company (2019)</p>
+                <p><strong>GenAI for Market Research</strong> - Coursera Online Learning Platform (2026)</p>
+                <p><strong>Research Proposal: Initiating Research</strong> - University of California, Davis (2025)</p>
                 <p><strong>Data Analysis with Python</strong> - Coursera Online Learning Platform (2020)</p>
+                <p><strong>Artificial Intelligence & Machine Learning using R</strong> - FingerTips Data Science Company (2019)</p>
+                <p><strong>Research Data and Statistical Analysis using R Programming</strong> - INFLIBNET Centre, India (2018)</p>
             </div>
         </div>
     </div>
 </body>
 </html>
+
 
