--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div>
                         <h3 class="job-title text-xl font-semibold text-gray-800">Research Analyst</h3>
-                        <p class="company-name text-gray-600">Inginit Technology</p>
+                        <p class="company-name text-gray-600">Inginit Technology @Mumbai (Remote)</p>
                     </div>
                 </div>
                 <p class="job-duration text-sm text-gray-500 mb-2">Mar 2023 - Present</p>
@@ -77,7 +77,7 @@
                     </div>
                     <div>
                         <h3 class="job-title text-xl font-semibold text-gray-800">MIS/Sales Analyst</h3>
-                        <p class="company-name text-gray-600">Suntara Cosmetics Pvt Ltd.</p>
+                        <p class="company-name text-gray-600">Suntara Cosmetics Pvt Ltd. @Ahmedabad (Onsite/Hybrid)</p>
                     </div>
                 </div>
                 <p class="job-duration text-sm text-gray-500 mb-2">Nov 2022 - Mar 2023 (Full Time) & Mar 2022 - Jul 2023 (Part Time)</p>
@@ -97,7 +97,7 @@
                     </div>
                     <div>
                         <h3 class="job-title text-xl font-semibold text-gray-800">Data Processing Specialist</h3>
-                        <p class="company-name text-gray-600">NielsenIQ</p>
+                        <p class="company-name text-gray-600">NielsenIQ @Vadodara (Hybrid)</p>
                     </div>
                 </div>
                 <p class="job-duration text-sm text-gray-500 mb-2">Sep 2020 - Mar 2022</p>
@@ -154,17 +154,18 @@
                     <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">Market Research</span>
                     <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">Team Leadership</span>
                     <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">Communication</span>
+                    <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">Prompt Engineering</span>
                 </div>
             </div>
             <div>
                 <h3 class="text-xl font-semibold text-gray-800 mb-2">Tools</h3>
                 <div class="flex flex-wrap gap-2">
                     <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">Microsoft Excel</span>
-                    <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">MS SQL</span>
                     <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">SPSS</span>
                     <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">Microsoft Power BI</span>
                     <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">Microsoft PowerPoint</span>
                     <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">Canva</span>
+                    <span class="skill-tag bg-gray-200 text-gray-800 px-4 py-1 rounded-full font-medium text-sm">GenAI Tools (ChatGPT, Claude, Gemini)</span>
                 </div>
             </div>
         </div>
@@ -183,6 +184,7 @@
     </div>
 </body>
 </html>
+
 
 
 
