--- a/index.html
+++ b/index.html
@@ -43,6 +43,55 @@
             </p>
         </div>
 
+<!-- Portfolio Section -->
+<div id="portfolio-section" class="bg-white p-6 md:p-8 rounded-2xl shadow-lg mb-6">
+  <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">Portfolio</h2>
+
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+    <!-- Portfolio Card -->
+    <div class="border rounded-xl p-5 hover:shadow-md transition">
+      <h3 class="text-xl font-semibold text-gray-800 mb-1">
+        Customer Satisfaction Survey Analysis
+      </h3>
+      <p class="text-sm text-gray-500 mb-3">B2C | FMCG Sector</p>
+
+      <ul class="text-gray-700 text-sm space-y-1 mb-4">
+        <li><strong>Objective:</strong> Measure customer satisfaction & drivers</li>
+        <li><strong>Method:</strong> Quant survey (5-point scale + OE)</li>
+        <li><strong>Tools:</strong> SPSS, Excel, PowerPoint</li>
+        <li><strong>Insights:</strong> Identified key dissatisfaction drivers & priority fixes</li>
+      </ul>
+
+      <div class="flex gap-3">
+        <a href="#" class="text-blue-600 font-medium hover:underline">View Report</a>
+        <a href="#" class="text-blue-600 font-medium hover:underline">Sample Slides</a>
+      </div>
+    </div>
+
+    <!-- Portfolio Card -->
+    <div class="border rounded-xl p-5 hover:shadow-md transition">
+      <h3 class="text-xl font-semibold text-gray-800 mb-1">
+        Sales & KPI Dashboard
+      </h3>
+      <p class="text-sm text-gray-500 mb-3">Retail Analytics</p>
+
+      <ul class="text-gray-700 text-sm space-y-1 mb-4">
+        <li><strong>Objective:</strong> Track AR & sales performance</li>
+        <li><strong>Method:</strong> Data modeling & KPI design</li>
+        <li><strong>Tools:</strong> Power BI, Excel</li>
+        <li><strong>Impact:</strong> Reduced reporting time by 30%</li>
+      </ul>
+
+      <div class="flex gap-3">
+        <a href="#" class="text-blue-600 font-medium hover:underline">View Dashboard</a>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+        
         <!-- Experience Section -->
         <div id="experience-section" class="bg-white p-6 md:p-8 rounded-2xl shadow-lg mb-6">
             <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-6">Experience</h2>
@@ -184,6 +233,7 @@
     </div>
 </body>
 </html>
+
 
 
 
