--- a/index.html
+++ b/index.html
@@ -49,25 +49,62 @@
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
-    <!-- Portfolio Card -->
-    <div class="border rounded-xl p-5 hover:shadow-md transition">
-      <h3 class="text-xl font-semibold text-gray-800 mb-1">
-        Customer Satisfaction Survey Analysis
-      </h3>
-      <p class="text-sm text-gray-500 mb-3">B2C | FMCG Sector</p>
+    <!-- Portfolio Card : Starbucks CSAT Survey -->
+<div class="border rounded-xl p-5 hover:shadow-md transition bg-white">
+  
+  <h3 class="text-xl font-semibold text-gray-800 mb-1">
+    Starbucks Customer Satisfaction (CSAT) Survey
+  </h3>
+  <p class="text-sm text-gray-500 mb-3">
+    Food & Beverage (QSR) | Consumer Research | Malaysia
+  </p>
 
-      <ul class="text-gray-700 text-sm space-y-1 mb-4">
-        <li><strong>Objective:</strong> Measure customer satisfaction & drivers</li>
-        <li><strong>Method:</strong> Quant survey (5-point scale + OE)</li>
-        <li><strong>Tools:</strong> SPSS, Excel, PowerPoint</li>
-        <li><strong>Insights:</strong> Identified key dissatisfaction drivers & priority fixes</li>
+  <ul class="text-gray-700 text-sm space-y-1 mb-4">
+    <li><strong>Objective:</strong> Understand customer buying behavior, satisfaction drivers, and revisit intent at Starbucks outlets.</li>
+
+    <li><strong>Methodology:</strong> Structured quantitative survey covering demographics, visit behavior, spend, product preference, promotions, and in-store experience.</li>
+
+    <li><strong>Sample:</strong> N = 122 respondents (Malaysia)</li>
+
+    <li><strong>Tools Used:</strong> Microsoft Excel, Statistical Analysis, PowerPoint</li>
+
+    <li>
+      <strong>Key Insights:</strong>
+      <ul class="list-disc list-inside ml-4 mt-1 space-y-1">
+        <li>70% customers fall in the 20–29 age group; majority earn &lt; RM 25,000 annually</li>
+        <li>Most customers visit rarely and spend less than 30 minutes per visit</li>
+        <li>77% show intent to repurchase; coffee and cold drinks are top categories</li>
+        <li>Price sensitivity is the primary reason for non-repeat behavior</li>
+        <li>Social media is the most effective promotional channel (73%)</li>
       </ul>
+    </li>
 
-      <div class="flex gap-3">
-        <a href="#" class="text-blue-600 font-medium hover:underline">View Report</a>
-        <a href="#" class="text-blue-600 font-medium hover:underline">Sample Slides</a>
-      </div>
-    </div>
+    <li>
+      <strong>Business Recommendations:</strong>
+      <ul class="list-disc list-inside ml-4 mt-1 space-y-1">
+        <li>Introduce lower-priced product range to address price sensitivity</li>
+        <li>Strengthen social media–led promotional strategy</li>
+        <li>Improve Wi-Fi quality to support meetings & longer stays</li>
+        <li>Launch membership & discount plans for students and working professionals</li>
+      </ul>
+    </li>
+  </ul>
+
+  <div class="flex flex-wrap gap-4">
+    <a href="StarbucksCSAT_MananGajjar.pdf" target="_blank"
+       class="text-blue-600 font-medium hover:underline">
+       View PDF
+    </a>
+
+    <a href="https://drive.google.com/file/d/18cCI8KScGKVH6_y9wqfz3x-VGZwWsg3K/view?usp=sharing"
+       target="_blank"
+       class="text-blue-600 font-medium hover:underline">
+       Open in Google Drive
+    </a>
+  </div>
+
+</div>
+
 
   </div>
 </div>
@@ -214,6 +251,7 @@
     </div>
 </body>
 </html>
+
 
 
 
