--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <li><strong>Sample:</strong> N = 122 respondents (Malaysia)</li>
 
-    <li><strong>Tools Used:</strong> Microsoft Excel, Statistical Analysis, PowerPoint</li>
+    <li><strong>Tools Used:</strong> Microsoft Excel, Microsoft PowerPoint, Statistical Analysis</li>
 
     <li>
       <strong>Key Insights:</strong>
@@ -91,15 +91,10 @@
   </ul>
 
   <div class="flex flex-wrap gap-4">
-    <a href="StarbucksCSAT_MananGajjar.pdf" target="_blank"
-       class="text-blue-600 font-medium hover:underline">
-       View PDF
-    </a>
-
     <a href="https://drive.google.com/file/d/18cCI8KScGKVH6_y9wqfz3x-VGZwWsg3K/view?usp=sharing"
        target="_blank"
        class="text-blue-600 font-medium hover:underline">
-       Open in Google Drive
+       View PDF
     </a>
   </div>
 
@@ -251,6 +246,7 @@
     </div>
 </body>
 </html>
+
 
 
 
