--- a/index.html
+++ b/index.html
@@ -49,56 +49,70 @@
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
-    <!-- Portfolio Card : Starbucks CSAT Survey -->
-<div class="border rounded-xl p-5 hover:shadow-md transition bg-white">
-  
-  <h3 class="text-xl font-semibold text-gray-800 mb-1">
-    Starbucks Customer Satisfaction (CSAT) Survey
-  </h3>
-  <p class="text-sm text-gray-500 mb-3">
-    Food & Beverage (QSR) | Consumer Research | Malaysia
-  </p>
+   <!-- Portfolio Card : Starbucks CSAT Survey -->
+<div class="border rounded-xl overflow-hidden hover:shadow-lg transition bg-white">
 
-  <ul class="text-gray-700 text-sm space-y-1 mb-4">
-    <li><strong>Objective:</strong> Understand customer buying behavior, satisfaction drivers, and revisit intent at Starbucks outlets.</li>
+  <!-- PDF Cover Preview -->
+  <a href="https://drive.google.com/file/d/18cCI8KScGKVH6_y9wqfz3x-VGZwWsg3K/view?usp=sharing"
+     target="_blank"
+     class="relative block group">
 
-    <li><strong>Methodology:</strong> Structured quantitative survey covering demographics, visit behavior, spend, product preference, promotions, and in-store experience.</li>
+    <img src="starbucks-csat-cover.jpg"
+         alt="Starbucks CSAT Survey Report Cover"
+         class="w-full h-56 object-cover">
 
-    <li><strong>Sample:</strong> N = 122 respondents (Malaysia)</li>
+    <!-- Hover Overlay -->
+    <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 transition flex items-center justify-center">
+      <span class="text-white text-sm font-semibold opacity-0 group-hover:opacity-100 transition">
+        View Full Report →
+      </span>
+    </div>
+  </a>
 
-    <li><strong>Tools Used:</strong> Microsoft Excel, Microsoft PowerPoint, Statistical Analysis</li>
+  <!-- Content -->
+  <div class="p-5">
 
-    <li>
-      <strong>Key Insights:</strong>
-      <ul class="list-disc list-inside ml-4 mt-1 space-y-1">
-        <li>70% customers fall in the 20–29 age group; majority earn &lt; RM 25,000 annually</li>
-        <li>Most customers visit rarely and spend less than 30 minutes per visit</li>
-        <li>77% show intent to repurchase; coffee and cold drinks are top categories</li>
-        <li>Price sensitivity is the primary reason for non-repeat behavior</li>
-        <li>Social media is the most effective promotional channel (73%)</li>
-      </ul>
-    </li>
+    <h3 class="text-xl font-semibold text-gray-800 mb-1">
+      Starbucks Customer Satisfaction (CSAT) Survey
+    </h3>
 
-    <li>
-      <strong>Business Recommendations:</strong>
-      <ul class="list-disc list-inside ml-4 mt-1 space-y-1">
-        <li>Introduce lower-priced product range to address price sensitivity</li>
-        <li>Strengthen social media–led promotional strategy</li>
-        <li>Improve Wi-Fi quality to support meetings & longer stays</li>
-        <li>Launch membership & discount plans for students and working professionals</li>
-      </ul>
-    </li>
-  </ul>
+    <p class="text-sm text-gray-500 mb-3">
+      Food & Beverage (QSR) | Consumer Research | Malaysia
+    </p>
 
-  <div class="flex flex-wrap gap-4">
-    <a href="https://drive.google.com/file/d/18cCI8KScGKVH6_y9wqfz3x-VGZwWsg3K/view?usp=sharing"
-       target="_blank"
-       class="text-blue-600 font-medium hover:underline">
-       View PDF
-    </a>
+    <ul class="text-gray-700 text-sm space-y-1 mb-4">
+      <li><strong>Objective:</strong> Understand customer buying behavior, satisfaction drivers, and revisit intent.</li>
+
+      <li><strong>Methodology:</strong> Structured quantitative survey covering demographics, visit behavior, spend, promotions, and in-store experience.</li>
+
+      <li><strong>Sample:</strong> N = 122 respondents</li>
+
+      <li><strong>Tools Used:</strong> Microsoft Excel, Microsoft PowerPoint, Statistical Analysis</li>
+
+      <li>
+        <strong>Key Insights:</strong>
+        <ul class="list-disc list-inside ml-4 mt-1 space-y-1">
+          <li>70% customers aged 20–29; majority earn &lt; RM 25,000</li>
+          <li>Most visits are rare and under 30 minutes</li>
+          <li>77% intent to repurchase; coffee & cold drinks dominate</li>
+          <li>Price sensitivity drives churn</li>
+          <li>Social media is the strongest promo channel (73%)</li>
+        </ul>
+      </li>
+    </ul>
+
+    <!-- CTA -->
+    <div class="flex gap-4">
+      <a href="https://drive.google.com/file/d/18cCI8KScGKVH6_y9wqfz3x-VGZwWsg3K/view?usp=sharing"
+         target="_blank"
+         class="text-blue-600 font-medium hover:underline">
+        View Full PDF
+      </a>
+    </div>
+
   </div>
-
 </div>
+
 
 
   </div>
@@ -246,6 +260,7 @@
     </div>
 </body>
 </html>
+
 
 
 
